fix: filter alignment

--- a/styles/components/all-products.css
+++ b/styles/components/all-products.css
@@ -89,6 +89,8 @@
     flex-direction: column;
     width: 100%;
     z-index: 10;
+    opacity: 1;
+    top: 0;
     transform: translateY(0%);
   }
 
